--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Android-Tool
+description: Program, created to make popular adb and fastboot commands easier to use 
