--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Android-Tool
+version: 1.1.0
 description: Program, created to make popular adb and fastboot commands easier to use
