Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: ""
 url: "https://friendly-telegram.gitlab.io"
 
 # Build settings
-theme: just-the-docs
+theme: jekyll-theme-minimal
 
 permalink: pretty
 
